Update SEO metadata for better sharing and search engine visibility

--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Goodwaves - Your Surfing Companion</title>
+    <title>Goodwaves - Technologie Invisible pour Vos Espaces</title>
+    <meta name="description" content="Découvrez Goodwaves, une technologie invisible qui transforme vos espaces en créant une harmonie parfaite entre Son, Lumière et Univers Connecté. Rêvez l'impossible, vivez l'invisible." />
+    <meta name="keywords" content="domotique, technologie invisible, lumière intelligente, son immersif, univers connecté, smart home" />
+    <meta name="author" content="Goodwaves" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://goodwaves.fr" />
+    <meta property="og:title" content="Goodwaves - Technologie Invisible pour Vos Espaces" />
+    <meta property="og:description" content="Découvrez une technologie invisible qui transforme vos espaces. Son, Lumière et Univers Connecté orchestrés en harmonie parfaite." />
+    <meta property="og:image" content="/img/Hero image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://goodwaves.fr" />
+    <meta property="twitter:title" content="Goodwaves - Technologie Invisible pour Vos Espaces" />
+    <meta property="twitter:description" content="Découvrez une technologie invisible qui transforme vos espaces. Son, Lumière et Univers Connecté orchestrés en harmonie parfaite." />
+    <meta property="twitter:image" content="/img/Hero image.png" />
 </head>
 <body>
     <div id="root"></div>
