Replace PNG images with optimized WebP format for better performance and smaller file sizes

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta property="og:url" content="https://goodwaves.fr" />
     <meta property="og:title" content="Goodwaves - Technologie Invisible pour Vos Espaces" />
     <meta property="og:description" content="Découvrez une technologie invisible qui transforme vos espaces. Son, Lumière et Univers Connecté orchestrés en harmonie parfaite." />
-    <meta property="og:image" content="/img/Hero image.png" />
+    <meta property="og:image" content="/img/Image héroïque.webp" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://goodwaves.fr" />
     <meta property="twitter:title" content="Goodwaves - Technologie Invisible pour Vos Espaces" />
     <meta property="twitter:description" content="Découvrez une technologie invisible qui transforme vos espaces. Son, Lumière et Univers Connecté orchestrés en harmonie parfaite." />
-    <meta property="twitter:image" content="/img/Hero image.png" />
+    <meta property="twitter:image" content="/img/Image héroïque.webp" />
 </head>
 <body>
     <div id="root"></div>
